# AthleteIQ

./: .gitignore  README.md  goal
Backend/: app.py  config.py  gkr.py  model_handler.py  proof_api.py  requirements.txt
Backend/api/models/: db.py
Backend/api/routes/: auth.py
Backend/api/utils/: session_wraps.py
Backend/proof_system/: Cargo.toml  test.rs
Backend/proof_system/src/: field_arithmetic.rs  lib.rs
Backend/proof_system/src/gkr/: circuit.rs  circuit_builder.rs  prover.rs  utils.rs  verifier.rs
Backend/zkp_zklogin/: Cargo.toml  Dockerfile  README.md  circuit.txt  circuit_zklogin.txt  witness.txt  witness_zklogin.txt  zklogin
Backend/zkp_zklogin/src/: main.rs
Client/: .gitignore  package.json
Client/circuits/: circuit.circom
Client/src/components/: .SubmitData.js.swp  Leaderboard.js  SubmitData.js
Contracts/: package.json
front/athleteiq/: .env.sample  globals.css  next.config.mjs  package-lock.json  package.json  page.tsx  tailwind.config.ts  tsconfig.json
front/athleteiq/app/: globals.css  layout.tsx  page.tsx
front/athleteiq/app/api/auth/salt/: route.ts
front/athleteiq/app/auth/callback/: callback.module.css  page.tsx
front/athleteiq/app/home/: page.tsx
front/athleteiq/app/leaderboard/: leaderboard.module.css  page.tsx
front/athleteiq/app/login/: login.module.css  page.tsx
front/athleteiq/app/marketplace/: page.tsx
front/athleteiq/app/register/: page.tsx
front/athleteiq/app/zklogin/: page.tsx
front/athleteiq/components/registration/: registration-form.tsx
front/athleteiq/components/registration/steps/: basic-info-step.tsx  exercise-habits-step.tsx  lifestyle-step.tsx  performance-step.tsx
front/athleteiq/components/ui/: BlurText.tsx  Titles.tsx  header.tsx
front/athleteiq/lib/: constants.ts  ephemeral.ts  hash.ts  idToken.ts  keyless.ts  types.ts  useKeylessAccounts.ts  utils.ts
zkproof/: jwt_expander.circom
