[package]
name = "zklogin"
version = "0.1.1"
edition = "2021"

[dependencies]
expander_compiler = { path = "../exp/expander_compiler" }  # Adjust path based on your setup
circuit-std-rs = { path = "../exp/circuit-std-rs"} # Adjust path based on your setup
ark-std = "0.4.0"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tiny-keccak = { version = "2.0", features = ["keccak"] }
num-bigint = "0.4.6"
num-traits = "0.2.19"
# remove these
keccak-hash = "0.10"
hex = "0.4"   # To format hash output

[features]
default = ["std"]
std = ["ark-std/std"]