[package]
name = "zklogin"
version = "0.1.1"
edition = "2021"

[dependencies]
expander_compiler = { git = "https://github.com/PolyhedraZK/ExpanderCompilerCollection"}
ark-std = "0.4.0"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
num-bigint = "0.4.6"
num-traits = "0.2.19"
keccak-hash = "0.10"
hex = "0.4"
blake2 = "0.10"
ethers = "2.0"
secp256k1 = "0.27"
gkr = { git = "https://github.com/PolyhedraZK/Expander", branch = "main" }


[features]
default = ["std"]
std = ["ark-std/std"]